<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_final_project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="theurgeboat@gmail.com">claypool</maintainer>
  <license>TODO: License declaration</license>

  <depend>turtlesim</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_interfaces</depend>
  <depend>turtlebot3_gazebo</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- ADDED PART -->
    <launch>      
      <launch_file>launch/gazebo.launch.py</launch_file>
      <launch_file>launch/gazebo_ver2.launch.xml</launch_file>
      <launch_file>launch/gazebo_ver3.launch.yml</launch_file>
    </launch>
    <!-- ADDED PART -->
  </export>
</package>
